--- a/Floorplan/Floorplan.vcxproj.filters
+++ b/Floorplan/Floorplan.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Lib">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Data">
       <UniqueIdentifier>{ca37a24e-0e0e-419a-a0b4-c75eb74900b2}</UniqueIdentifier>
     </Filter>
@@ -16,41 +12,50 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Utils">
+      <UniqueIdentifier>{f767a38a-d169-485b-8c10-457c65a60750}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SkylineBinPack.hpp">
-      <Filter>Lib</Filter>
-    </ClInclude>
     <ClInclude Include="FloorplanBinPack.hpp">
       <Filter>Algorithm</Filter>
-    </ClInclude>
-    <ClInclude Include="GuillotineBinPack.hpp">
-      <Filter>Lib</Filter>
     </ClInclude>
     <ClInclude Include="Rect.hpp">
       <Filter>Data</Filter>
     </ClInclude>
+    <ClInclude Include="GuillotineBinPack.hpp">
+      <Filter>Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="SkylineBinPack.hpp">
+      <Filter>Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="Instance.hpp">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils.hpp">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Instance\MCNCbench\HARD\ami33.blocks">
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n10.blocks">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\Instance\MCNCbench\HARD\ami33.nets">
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n10.nets">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\Instance\MCNCbench\HARD\ami33.pl">
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n10.pl">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\Instance\GSRCbench\HARD\n10.blocks">
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\ami33.blocks">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\Instance\GSRCbench\HARD\n10.nets">
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\ami33.nets">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\Instance\GSRCbench\HARD\n10.pl">
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\ami33.pl">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
