--- a/QAPSolver/QAPSolver.vcxproj.filters
+++ b/QAPSolver/QAPSolver.vcxproj.filters
@@ -19,5 +19,8 @@
     <None Include="..\Deploy\Instance\qapdata\tai20a.dat">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="..\Deploy\Instance\QAPdata\nug12.dat">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
