[done]完成AdaptiveSelection & 纯优化面积可以求得98~99%利用率

--- a/Floorplan/Floorplan.vcxproj
+++ b/Floorplan/Floorplan.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AdaptiveSelection.hpp" />
     <ClInclude Include="GuillotineBinPack.hpp" />
     <ClInclude Include="FloorplanBinPack.hpp">
       <SubType>
