[done]添加Config.hpp方便统一管理参数与策略 & [todo]fbp增加线长目标

--- a/Floorplan/Floorplan.vcxproj
+++ b/Floorplan/Floorplan.vcxproj
@@ -168,6 +168,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdaptiveSelection.hpp" />
+    <ClInclude Include="Config.hpp">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="GuillotineBinPack.hpp" />
     <ClInclude Include="FloorplanBinPack.hpp">
       <SubType>
