--- a/Floorplan/Floorplan.vcxproj
+++ b/Floorplan/Floorplan.vcxproj
@@ -193,9 +193,36 @@
     <None Include="..\Deploy\Instance\GSRCbench\HARD\n10.blocks" />
     <None Include="..\Deploy\Instance\GSRCbench\HARD\n10.nets" />
     <None Include="..\Deploy\Instance\GSRCbench\HARD\n10.pl" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n100.blocks" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n100.nets" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n100.pl" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n200.blocks" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n200.nets" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n200.pl" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n30.blocks" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n30.nets" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n30.pl" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n300.blocks" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n300.nets" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n300.pl" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n50.blocks" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n50.nets" />
+    <None Include="..\Deploy\Instance\GSRCbench\HARD\n50.pl" />
     <None Include="..\Deploy\Instance\MCNCbench\HARD\ami33.blocks" />
     <None Include="..\Deploy\Instance\MCNCbench\HARD\ami33.nets" />
     <None Include="..\Deploy\Instance\MCNCbench\HARD\ami33.pl" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\ami49.blocks" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\ami49.nets" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\ami49.pl" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\apte.blocks" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\apte.nets" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\apte.pl" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\hp.blocks" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\hp.nets" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\hp.pl" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\xerox.blocks" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\xerox.nets" />
+    <None Include="..\Deploy\Instance\MCNCbench\HARD\xerox.pl" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QAPSolver\QAPSolver.vcxproj">
