[done] 使用boost/geometry增加可视化调试功能

--- a/Floorplan/Floorplan.vcxproj.filters
+++ b/Floorplan/Floorplan.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="Config.hpp">
       <Filter>Data</Filter>
     </ClInclude>
+    <ClInclude Include="Visualize.hpp">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Deploy\Instance\GSRC\HARD\n10.blocks">
