删除MetisTester项目 & 使用html_drawer作图(仅完成GSRC初始解) & 规范几个相关函数命名

--- a/Floorplan/Floorplan.vcxproj
+++ b/Floorplan/Floorplan.vcxproj
@@ -188,7 +188,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Visualize.hpp">
+    <ClInclude Include="Visualizer.hpp">
       <SubType>
       </SubType>
     </ClInclude>
