--- a/Floorplan/Floorplan.vcxproj.filters
+++ b/Floorplan/Floorplan.vcxproj.filters
@@ -15,12 +15,6 @@
     <Filter Include="Utils">
       <UniqueIdentifier>{f767a38a-d169-485b-8c10-457c65a60750}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Algorithm\bottom">
-      <UniqueIdentifier>{10dc61ae-f593-457f-a4d3-6de328cb87b4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Algorithm\top">
-      <UniqueIdentifier>{a22488d3-c559-4897-bfe7-06fb4574f5cc}</UniqueIdentifier>
-    </Filter>
     <Filter Include="资源文件\GSRC">
       <UniqueIdentifier>{7c769cf0-d568-43e5-ba55-3839136aa9d9}</UniqueIdentifier>
     </Filter>
@@ -32,35 +26,33 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Rect.hpp">
-      <Filter>Data</Filter>
-    </ClInclude>
     <ClInclude Include="Instance.hpp">
       <Filter>Data</Filter>
     </ClInclude>
     <ClInclude Include="Utils.hpp">
       <Filter>Utils</Filter>
     </ClInclude>
-    <ClInclude Include="FloorplanBinPack.hpp">
-      <Filter>Algorithm\bottom</Filter>
-    </ClInclude>
-    <ClInclude Include="GuillotineBinPack.hpp">
-      <Filter>Algorithm\bottom</Filter>
-    </ClInclude>
-    <ClInclude Include="SkylineBinPack.hpp">
-      <Filter>Algorithm\bottom</Filter>
-    </ClInclude>
-    <ClInclude Include="QAPCluster.hpp">
-      <Filter>Algorithm\top</Filter>
-    </ClInclude>
-    <ClInclude Include="AdaptiveSelection.hpp">
-      <Filter>Algorithm\top</Filter>
-    </ClInclude>
-    <ClInclude Include="Config.hpp">
-      <Filter>Data</Filter>
-    </ClInclude>
     <ClInclude Include="Visualizer.hpp">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Data.hpp">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="QAPCluster.hpp">
+      <Filter>Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="AdaptiveSelecter.hpp">
+      <Filter>Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="Config.hpp" />
+    <ClInclude Include="RandomLocalSearcher.hpp">
+      <Filter>Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="BeamSearcher.hpp">
+      <Filter>Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="FloorplanPacker.hpp">
+      <Filter>Algorithm</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
