--- a/Floorplan/Floorplan.vcxproj.filters
+++ b/Floorplan/Floorplan.vcxproj.filters
@@ -21,6 +21,9 @@
     <Filter Include="资源文件\MCNC">
       <UniqueIdentifier>{a4ead705-59a1-4258-9d5f-568d4bdbddf4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Algorithm\fbp">
+      <UniqueIdentifier>{6ccc6402-0ab8-4c17-90b2-ee217658fa9e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
@@ -44,16 +47,16 @@
     <ClInclude Include="AdaptiveSelecter.hpp">
       <Filter>Algorithm</Filter>
     </ClInclude>
-    <ClInclude Include="Config.hpp" />
-    <ClInclude Include="RandomLocalSearcher.hpp">
-      <Filter>Algorithm</Filter>
+    <ClInclude Include="FloorplanPacker.hpp">
+      <Filter>Algorithm\fbp</Filter>
     </ClInclude>
     <ClInclude Include="BeamSearcher.hpp">
-      <Filter>Algorithm</Filter>
+      <Filter>Algorithm\fbp</Filter>
     </ClInclude>
-    <ClInclude Include="FloorplanPacker.hpp">
-      <Filter>Algorithm</Filter>
+    <ClInclude Include="RandomLocalSearcher.hpp">
+      <Filter>Algorithm\fbp</Filter>
     </ClInclude>
+    <ClInclude Include="Config.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Deploy\Instance\GSRC\HARD\n10.blocks">
